--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <head><link rel="stylesheet" href="/static/style.css"></head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./static/style.css" />
     <title>Note App</title>
   </head>
   <body>
@@ -12,8 +12,8 @@
     <main class="main">
       <div id="result" class="result"></div>
     </main>
-    <footer  class="footer">&copy; <span id="date"></span></footer>
-  
-   <script src="/static/client.js"></script>
+    <footer class="footer">&copy; <span id="date"></span></footer>
+
+    <script src="./static/client.js"></script>
   </body>
 </html>
